<resources>
    <!-- fonts -->

    <string name="font_bold">fonts/AmsiPro-Bold.otf</string>
    <string name="font_regular">fonts/AmsiPro-Regular.otf</string>

    <string name="app_name">Smart tasks</string>

    <!-- Action bar titles -->
    <string name="task_title">Tasks</string>
    <string name="task_detail">Task Details</string>

    <!-- saveInstance Bundle key -->

    <string name="last_calendar_position">LAST_CALENDAR_POSITION</string>

    <!-- comment_dialog strings -->

    <string name="hint">Type your comment</string>
    <string name="dialogQuestion">Do you want to leave the comment?</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="comment">Comment</string>

    <!-- time formats -->
    <string name="date_format">yyyy-MM-dd</string>
    <string name="short_date_format">MMM dd yyyy</string>
    <string name="time_format">HH:mm:ss</string>
    <string name="full_time_format">yyyy-MM-dd HH:mm:ss</string>

    <!-- diagram tags -->

    <string name="dialog">COMMENT_DIAGRAM</string>

    <!-- status strings -->

    <string name="resolved">Resolved</string>
    <string name="unresolved">Unresolved</string>

    <!-- keys for data send via Intent from FragmentContent.class to TaskDetails.class -->

    <string name="sorted_array">SORTED_ARRAY</string>
    <string name="clicked_item_position">CLICKED_ITEM_POSITION</string>
    <string name="calendar_position">CALENDAR_POSITION</string>

    <!-- Progress dialog message -->
    <string name="progress_dialog_message">Please wait…</string>

    <!-- No tasks for today message -->
    <string name="no_tasks">No tasks for today!</string>

    <!-- FragmentContent keys -->
    <string name="bundle_extra_date">DATE</string>
    <string name="bundle_extra_tasks">TASKS</string>

    <!-- Button text -->
    <string name="button_resolve">Resolve</string>
    <string name="button_cant_resolve">Can\'t resolve</string>

    <!-- Label texts -->
    <string name="due_date">Due date</string>
    <string name="days_left">Days left</string>
    <string name="priority">%d</string>

    <!-- Alert text -->
    <string name="alert">Internet connection failed!</string>
    <string name="exit">Exit!</string>
    <string name="alert_tag">ALERT</string>

</resources>
