<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"

    >
    <LinearLayout
        android:layout_margin="@dimen/dialog_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/questionContainer"
        android:minHeight="0dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/PagerTabStripText"
            android:text="@string/dialogQuestion"
            android:id="@+id/textView"
           />
        <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/wrapperQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_margin"
         >

        <Button
            android:textAppearance="@style/ButtonText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:id="@+id/no"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/red"
            android:layout_marginRight="@dimen/button_space"
            android:textStyle="bold"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:id="@+id/yes"
            android:textColor="@color/white"
            android:background="@color/green"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textAppearance="@style/PagerTabStripText"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="@dimen/dialog_margin"
        android:orientation="vertical"
        android:id="@+id/commentContainer"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout="@+id/questionContainer"
        >

        <EditText
            android:background="@color/backgroundColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="15dp"
            android:inputType="text"
            android:hint="@string/hint"
            android:textAppearance="@style/PagerTabStripText"
            android:id="@+id/comment" />
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_margin"
            >
            <Button
                android:id="@+id/cancel"
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:background="@color/red"
                android:layout_marginRight="@dimen/button_space"
                android:textAppearance="@style/ButtonText"
                />

            <Button
                android:id="@+id/submit"
                android:text="@string/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:background="@color/green"
                android:textAppearance="@style/ButtonText" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>